--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ nav ul li a:hover, a.active {
     margin: 5px 0px;
     font-size: 30px;
     font-weight: 600;
+    color: #e33741;
 }
 
 .popup .description {
@@ -223,9 +224,9 @@ nav ul li a:hover, a.active {
 
 .popup .dismiss-btn button {
     padding: 10px 20px;
-    background: #111;
+    background: #e33741;
     color: #f5f5f5;
-    border: 2px solid #111;
+    border: 2px solid #e33741;
     font-size: 16px;
     font-weight: 600;
     outline: none;
